tests/errors/variables-assign-type-mismatch.ari
fn main() -> i64 {
  var value: i32 = 1;
  value = true;
  return value as i64;
}
